# Drone-Delivery-Landing-Zone-Detection

./: README.md
lib/: CMakeLists.txt  main.cpp
lib/config/: algo_testing_own_pcd_config.yaml  monte_carlo_benchmarking_config.yaml  pipeline2Octree.yaml
lib/include/: architecture.h  common.h  hazard_metrices.h
